--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/de.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/de.json
@@ -5,7 +5,7 @@
 	"Extract me": "",
 	"Others": "",
 	"Overview": "Überblick",
-	"Popular troubleshooting tools": "",
+	"Popular troubleshooting tools": "Beliebte Tools zur Fehlerbehebung",
 	"Privacy": "Privatsphäre",
 	"Risk alerts": "",
 	"Troubleshooting categories": "",
@@ -13,7 +13,7 @@
 	"UTC Start Time (mm/dd/yy)": "UTC-Startzeit (MM / TT / JJ)",
 	"ase.homepage.description": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
 	"ase.homepage.title": "App Service-Umgebungsdiagnose",
-	"category-overview.If you have a specific problem you want to investigate, click a topic in the left navigation or click Ask Genie.": "",
+	"category-overview.If you have a specific problem you want to investigate, click a topic in the left navigation or click Ask Genie.": "Wenn Sie ein bestimmtes Problem haben, das Sie untersuchen möchten, klicken Sie in der linken Navigation auf ein Thema oder klicken Sie auf Genie fragen",
 	"detector-command-bar.Ask Genie": "Fragen Sie Genie",
 	"detector-command-bar.Feedback": "Feedback",
 	"detector-command-bar.Refresh": "Aktualisierung",
@@ -27,6 +27,8 @@
 	"fabric-feedback.Thank you for your feedback": "Vielen Dank für dein Feedback",
 	"fabric-feedback.checkLabel": "Microsoft kann Sie per E-Mail über Ihr Feedback informieren",
 	"fabric-search-results| Ask chatbot Genie": "Fragen Sie Chatbot Genie",
+	"function.homepage.description": "Untersuchen Sie die Leistung Ihrer App, diagnostizieren Sie Probleme und finden Sie heraus, wie Sie Ihre Anwendung verbessern können.",
+	"function.homepage.title": "Funktions-App-Diagnose (Vorschau)",
 	"homePageText.description": "",
 	"homePageText.searchBarPlaceHolder": "",
 	"homePageText.title": "",
