--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/es.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/es.json
@@ -5,7 +5,7 @@
 	"Extract me": "fwfewf",
 	"Others": "",
 	"Overview": "Visión general",
-	"Popular troubleshooting tools": "English Popular troubleshooting tools",
+	"Popular troubleshooting tools": "Herramientas de resolución de problemas populares",
 	"Privacy": "intimidad",
 	"Risk alerts": "Espanish categories",
 	"Troubleshooting categories": "Espanish",
@@ -13,7 +13,7 @@
 	"UTC Start Time (mm/dd/yy)": "Hora de inicio UTC (mm / dd / aa)",
 	"ase.homepage.description": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
 	"ase.homepage.title": "Diagnóstico del entorno del servicio de aplicaciones",
-	"category-overview.If you have a specific problem you want to investigate, click a topic in the left navigation or click Ask Genie.": "",
+	"category-overview.If you have a specific problem you want to investigate, click a topic in the left navigation or click Ask Genie.": "Si tiene un problema específico que desea investigar, haga clic en un tema en la navegación izquierda o haga clic en Preguntar a Genie",
 	"detector-command-bar.Ask Genie": "Pregúntale a Genie",
 	"detector-command-bar.Feedback": "Realimentación",
 	"detector-command-bar.Refresh": "Refrescar",
@@ -27,6 +27,8 @@
 	"fabric-feedback.Thank you for your feedback": "Gracias por tus comentarios",
 	"fabric-feedback.checkLabel": "Microsoft puede enviarle un correo electrónico con sus comentarios",
 	"fabric-search-results| Ask chatbot Genie": "Pregunta al chatbot Genie",
+	"function.homepage.description": "Investigue el rendimiento de su aplicación, diagnostique problemas y descubra cómo mejorarla.",
+	"function.homepage.title": "Función de diagnóstico de la aplicación (versión preliminar)",
 	"homePageText.description": "",
 	"homePageText.searchBarPlaceHolder": "",
 	"homePageText.title": "",
