--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/zh.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/zh.json
@@ -5,7 +5,7 @@
 	"Extract me": "fwfewf",
 	"Others": "",
 	"Overview": "概述",
-	"Popular troubleshooting tools": "English Popular troubleshooting tools",
+	"Popular troubleshooting tools": "常用的故障排除工具",
 	"Privacy": "隐私",
 	"Risk alerts": "Espanish categories",
 	"Troubleshooting categories": "Espanish categories",
@@ -13,7 +13,7 @@
 	"UTC Start Time (mm/dd/yy)": "UTC开始时间（mm / dd / yy）",
 	"ase.homepage.description": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
 	"ase.homepage.title": "App Service Environment诊断",
-	"category-overview.If you have a specific problem you want to investigate, click a topic in the left navigation or click Ask Genie.": "",
+	"category-overview.If you have a specific problem you want to investigate, click a topic in the left navigation or click Ask Genie.": "如果您有特定的问题要调查，请单击左侧导航中的主题或单击“询问小助手”。",
 	"detector-command-bar.Ask Genie": "询问小助手",
 	"detector-command-bar.Feedback": "反馈",
 	"detector-command-bar.Refresh": "刷新",
@@ -27,6 +27,8 @@
 	"fabric-feedback.Thank you for your feedback": "感谢您的反馈意见",
 	"fabric-feedback.checkLabel": "Microsoft可以通过电子邮件向您发送有关您的反馈的信息",
 	"fabric-search-results| Ask chatbot Genie": "询问智能小助手",
+	"function.homepage.description": "调查您的应用程序的性能如何，诊断问题并发现如何改进您的应用程序。",
+	"function.homepage.title": "功能应用程序诊断（预览）",
 	"homePageText.description": "",
 	"homePageText.searchBarPlaceHolder": "",
 	"homePageText.title": "",
