--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/ja.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/ja.json
@@ -5,7 +5,7 @@
 	"Extract me": "fwfewf",
 	"Others": "",
 	"Overview": "概要",
-	"Popular troubleshooting tools": "English Popular troubleshooting tools",
+	"Popular troubleshooting tools": "人気のトラブルシューティングツール",
 	"Privacy": "プライバシー",
 	"Risk alerts": "Espanish categories",
 	"Troubleshooting categories": "Espanish categories",
@@ -13,7 +13,7 @@
 	"UTC Start Time (mm/dd/yy)": "UTC開始時間（mm / dd / yy）",
 	"ase.homepage.description": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
 	"ase.homepage.title": "App Service Environmentの診断",
-	"category-overview.If you have a specific problem you want to investigate, click a topic in the left navigation or click Ask Genie.": "",
+	"category-overview.If you have a specific problem you want to investigate, click a topic in the left navigation or click Ask Genie.": "調査したい特定の問題がある場合は、左側のナビゲーションでトピックをクリックするか、[魔神に尋ねる]をクリックします",
 	"detector-command-bar.Ask Genie": "魔神に聞く",
 	"detector-command-bar.Feedback": "フィードバック",
 	"detector-command-bar.Refresh": "リフレッシュ",
@@ -27,6 +27,8 @@
 	"fabric-feedback.Thank you for your feedback": "ご意見ありがとうございます",
 	"fabric-feedback.checkLabel": "マイクロソフトはあなたのフィードバックについてあなたに電子メールを送ることができます",
 	"fabric-search-results| Ask chatbot Genie": "チャットボットの魔神に聞く",
+	"function.homepage.description": "アプリのパフォーマンスを調査し、問題を診断して、アプリケーションを改善する方法を見つけます。",
+	"function.homepage.title": "機能アプリの診断（プレビュー）",
 	"homePageText.description": "",
 	"homePageText.searchBarPlaceHolder": "",
 	"homePageText.title": "",
