Add all the language resource files used for ASD in last 90 days

--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/es.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/es.json
@@ -1,23 +1,83 @@
 {
+	"API Management.homepage.description": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
+	"ASE.homepage.description": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
+	"ASE.homepage.title": "Diagnóstico del entorno del servicio de aplicaciones",
+	"App Service Certificates.homepage.description": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
+	"App Service Certificates.homepage.title": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
 	"Apply": "",
 	"Ask Genie": "",
+	"Availability": "",
+	"Availability and Performance": "",
+	"Azure Container Instances.homepage.description": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
+	"Azure Container Instances.homepage.title": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
+	"Azure Container Registry.homepage.description": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
+	"Azure Container Registry.homepage.title": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
+	"Azure Kubernetes Service.homepage.description": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
+	"Azure Kubernetes Service.homepage.title": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
+	"Azure SignalR Services.homepage.description": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
+	"Azure SignalR Services.homepage.title": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
+	"Azure Spring Cloud.category.AvailabilityAndPerformance.description": "¿Su aplicación experimenta tiempo de inactividad o lentitud? ¿Sus configuraciones para Config Server no responden? Investigue y descubra problemas que puedan afectar la disponibilidad de su aplicación.",
+	"Azure Spring Cloud.category.AvailabilityAndPerformance.name": "Disponibilidad y rendimiento",
+	"Azure Spring Cloud.category.ConfigurationsAndManagement.description": "¿Tiene problemas para exportar registros de plataforma o seguimiento distribuido? ¿Tiene problemas con algunas configuraciones que configuró para su aplicación? Averigüe si configuró incorrectamente algunas características de Azure Spring Cloud, como Log Analytics, App Insights, escalado, implementaciones y dominio. ..",
+	"Azure Spring Cloud.category.ConfigurationsAndManagement.name": "Configuraciones y gestión",
+	"Azure Spring Cloud.category.Networking.description": "¿Tiene problemas de conectividad de red cuando Azure Spring Cloud se implementa en su propia red virtual? Averigüe si configuró incorrectamente la Zona DNS privada, el Servidor DNS personalizado o bloqueó el tráfico saliente requerido en su instancia de servicio inyectado de VNet.",
+	"Azure Spring Cloud.category.Networking.name": "Redes",
+	"Azure Spring Cloud.homepage.description": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
+	"Azure Spring Cloud.homepage.title": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
 	"Cancel": "",
-	"Extract me": "fwfewf",
+	"Check your app’s health and discover app or platform issues.": "Verifique el estado de su aplicación y descubra problemas con la plataforma o la aplicación.",
+	"Click here to view more details": "",
+	"Critical": "",
+	"Function App.homepage.description": "Investigue el rendimiento de su aplicación, diagnostique problemas y descubra cómo mejorarla.",
+	"Function App.homepage.title": "Función de diagnóstico de la aplicación (versión preliminar)",
+	"Info": "",
+	"Integration Service Environments.homepage.name": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
+	"Integration Service Environments.homepage.title": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
+	"Keywords": "Palabras clave",
+	"Notifications": "",
 	"Others": "",
 	"Overview": "Visión general",
 	"Popular troubleshooting tools": "Herramientas de resolución de problemas populares",
 	"Privacy": "intimidad",
 	"Risk alerts": "Espanish categories",
+	"Service Fabric.homepage.description": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
+	"Service Fabric.homepage.title": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
+	"Static Azure Kubernetes Service.homepage.description": "Explore formas de diagnosticar y solucionar los problemas comunes de su clúster, desde operaciones CRUD hasta problemas de conexión. Haga clic en cualquiera de los documentos a continuación para comenzar a solucionar problemas.",
+	"Static Azure Kubernetes Service.homepage.title": "Diagnóstico del servicio de Azure Kubernetes",
+	"Success": "",
+	"Troubleshoot": "Solucionar problemas",
 	"Troubleshooting categories": "Espanish",
 	"UTC End Time (mm/dd/yy)": "Hora de finalización UTC (mm / dd / aa)",
 	"UTC Start Time (mm/dd/yy)": "Hora de inicio UTC (mm / dd / aa)",
-	"ase.homepage.description": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
-	"ase.homepage.title": "Diagnóstico del entorno del servicio de aplicaciones",
+	"Warning": "",
+	"Web App (Linux).homepage.description": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
+	"Web App (Linux).homepage.title": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
+	"Web App (Windows).category.AvailabilityAndPerformanceWindows.description": "Verifique el estado de su aplicación y descubra problemas con la plataforma o la aplicación.",
+	"Web App (Windows).category.AvailabilityAndPerformanceWindows.keywords": "Tiempo de inactividad, 5xx, 4xx, CPU, memoria, SNAT",
+	"Web App (Windows).category.AvailabilityAndPerformanceWindows.name": "Disponibilidad y rendimiento",
+	"Web App (Windows).category.ConfigurationAndManagement.description": "Descubra si las funciones del servicio de su aplicación están mal configuradas.",
+	"Web App (Windows).category.ConfigurationAndManagement.keywords": "Backups, Slots, Swaps, Scaling, IP Config",
+	"Web App (Windows).category.ConfigurationAndManagement.name": "Configuración y gestión",
+	"Web App (Windows).category.DiagnosticTools.description": "Ejecute herramientas proactivas para mitigar automáticamente la aplicación.",
+	"Web App (Windows).category.DiagnosticTools.keywords": "Autocuración",
+	"Web App (Windows).category.DiagnosticTools.name": "Herramientas diagnosticas",
+	"Web App (Windows).category.RiskAssessments.description": "Analice su aplicación para obtener un rendimiento y configuraciones óptimos.",
+	"Web App (Windows).category.RiskAssessments.keywords": "Autoescala, AlwaysOn, Density, ARR, Health Check",
+	"Web App (Windows).category.RiskAssessments.name": "Evaluaciones de riesgo",
+	"Web App (Windows).category.SSLandDomains.description": "Descubra problemas con certificados y dominios personalizados.",
+	"Web App (Windows).category.SSLandDomains.keywords": "Análisis de cambios, SQL, dependencia, almacenamiento",
+	"Web App (Windows).category.SSLandDomains.name": "SSL y dominios",
+	"Web App (Windows).category.navigator.description": "Realice un seguimiento de los cambios en su aplicación y sus dependencias.",
+	"Web App (Windows).category.navigator.keywords": "Análisis de cambios, SQL, dependencia, almacenamiento",
+	"Web App (Windows).category.navigator.name": "Navegador (vista previa)",
+	"Web App (Windows).homepage.description": "Investigue el rendimiento de su aplicación, diagnostique problemas y descubra cómo mejorarla.",
+	"Web App (Windows).homepage.title": "Diagnóstico del servicio de aplicaciones (versión preliminar)",
 	"category-overview.If you have a specific problem you want to investigate, click a topic in the left navigation or click Ask Genie.": "Si tiene un problema específico que desea investigar, haga clic en un tema en la navegación izquierda o haga clic en Preguntar a Genie",
 	"detector-command-bar.Ask Genie": "Pregúntale a Genie",
 	"detector-command-bar.Feedback": "Realimentación",
 	"detector-command-bar.Refresh": "Refrescar",
-	"fabric-feedback.Are you satisfied with your experience? ": "¿Estás satisfecho con tu experiencia?",
+	"detector-command-bar.searchPlaceHolder": "Busque problemas o herramientas comunes",
+	"fabric-feedback.Are you satisfied with your experience?": "",
 	"fabric-feedback.Feedback": "Realimentación",
 	"fabric-feedback.Feedback sent!": "¡Comentarios enviados!",
 	"fabric-feedback.Submit feedback": "Enviar comentarios",
@@ -27,11 +87,10 @@
 	"fabric-feedback.Thank you for your feedback": "Gracias por tus comentarios",
 	"fabric-feedback.checkLabel": "Microsoft puede enviarle un correo electrónico con sus comentarios",
 	"fabric-search-results| Ask chatbot Genie": "Pregunta al chatbot Genie",
-	"function.homepage.description": "Investigue el rendimiento de su aplicación, diagnostique problemas y descubra cómo mejorarla.",
-	"function.homepage.title": "Función de diagnóstico de la aplicación (versión preliminar)",
 	"homePageText.description": "",
 	"homePageText.searchBarPlaceHolder": "",
 	"homePageText.title": "",
+	"homepage.Click here to checkout the new version.": "Haga clic aquí para ver la nueva versión.",
 	"homepage.Have questions?": "Pregunta",
 	"homepage.Popular troubleshooting tools": "Herramientas de resolución de problemas populares",
 	"homepage.Privacy": "intimidad",
