--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/ja.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/ja.json
@@ -1,23 +1,83 @@
 {
+	"API Management.homepage.description": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
+	"ASE.homepage.description": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
+	"ASE.homepage.title": "App Service Environmentの診断",
+	"App Service Certificates.homepage.description": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
+	"App Service Certificates.homepage.title": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
 	"Apply": "",
 	"Ask Genie": "",
+	"Availability": "",
+	"Availability and Performance": "",
+	"Azure Container Instances.homepage.description": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
+	"Azure Container Instances.homepage.title": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
+	"Azure Container Registry.homepage.description": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
+	"Azure Container Registry.homepage.title": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
+	"Azure Kubernetes Service.homepage.description": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
+	"Azure Kubernetes Service.homepage.title": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
+	"Azure SignalR Services.homepage.description": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
+	"Azure SignalR Services.homepage.title": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
+	"Azure Spring Cloud.category.AvailabilityAndPerformance.description": "アプリでアプリのダウンタイムや速度低下が発生していますか？ Config Serverの構成で応答がありませんか？アプリの可用性に影響を与える可能性のある問題を調査して発見します。",
+	"Azure Spring Cloud.category.AvailabilityAndPerformance.name": "可用性とパフォーマンス",
+	"Azure Spring Cloud.category.ConfigurationsAndManagement.description": "プラットフォームログまたは分散トレースのエクスポートに問題がありますか？アプリ用に構成したいくつかの設定に問題がありますか？ Log Analytics、App Insights、スケーリング、デプロイメント、ドメインなど、Azure SpringCloudの一部の機能を誤って構成したかどうかを確認します。",
+	"Azure Spring Cloud.category.ConfigurationsAndManagement.name": "構成と管理",
+	"Azure Spring Cloud.category.Networking.description": "Azure Spring Cloudを独自の仮想ネットワークにデプロイするときに、ネットワーク接続の問題が発生していませんか？プライベートDNSゾーン、カスタムDNSサーバーを誤って構成したか、VNetインジェクションサービスインスタンスで必要なアウトバウンドトラフィックをブロックしたかどうかを確認します。",
+	"Azure Spring Cloud.category.Networking.name": "ネットワーキング",
+	"Azure Spring Cloud.homepage.description": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
+	"Azure Spring Cloud.homepage.title": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
 	"Cancel": "",
-	"Extract me": "fwfewf",
+	"Check your app’s health and discover app or platform issues.": "アプリの状態を確認し、アプリまたはプラットフォームの問題を発見します。",
+	"Click here to view more details": "",
+	"Critical": "",
+	"Function App.homepage.description": "アプリのパフォーマンスを調査し、問題を診断して、アプリケーションを改善する方法を見つけます。",
+	"Function App.homepage.title": "機能アプリの診断（プレビュー）",
+	"Info": "",
+	"Integration Service Environments.homepage.name": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
+	"Integration Service Environments.homepage.title": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
+	"Keywords": "キーワード",
+	"Notifications": "",
 	"Others": "",
 	"Overview": "概要",
 	"Popular troubleshooting tools": "人気のトラブルシューティングツール",
 	"Privacy": "プライバシー",
 	"Risk alerts": "Espanish categories",
+	"Service Fabric.homepage.description": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
+	"Service Fabric.homepage.title": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
+	"Static Azure Kubernetes Service.homepage.description": "CRUD操作から接続の問題まで、クラスターの一般的な問題を診断およびトラブルシューティングする方法を探ります。以下のドキュメントのいずれかをクリックして、トラブルシューティングを開始してください。",
+	"Static Azure Kubernetes Service.homepage.title": "AzureKubernetesサービス診断",
+	"Success": "",
+	"Troubleshoot": "トラブルシューティング",
 	"Troubleshooting categories": "Espanish categories",
 	"UTC End Time (mm/dd/yy)": "UTC終了時間（mm / dd / yy）",
 	"UTC Start Time (mm/dd/yy)": "UTC開始時間（mm / dd / yy）",
-	"ase.homepage.description": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
-	"ase.homepage.title": "App Service Environmentの診断",
+	"Warning": "",
+	"Web App (Linux).homepage.description": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
+	"Web App (Linux).homepage.title": "App Service環境診断を使用して、App Service環境のパフォーマンスを調査し、問題を診断し、AppService環境の可用性を向上させる方法を見つけます。",
+	"Web App (Windows).category.AvailabilityAndPerformanceWindows.description": "アプリの状態を確認し、アプリまたはプラットフォームの問題を発見します。",
+	"Web App (Windows).category.AvailabilityAndPerformanceWindows.keywords": "ダウンタイム、5xx、4xx、CPU、メモリ、SNAT",
+	"Web App (Windows).category.AvailabilityAndPerformanceWindows.name": "可用性とパフォーマンス",
+	"Web App (Windows).category.ConfigurationAndManagement.description": "アプリサービスの機能が正しく構成されていないかどうかを確認します。",
+	"Web App (Windows).category.ConfigurationAndManagement.keywords": "バックアップ、スロット、スワップ、スケーリング、IP構成",
+	"Web App (Windows).category.ConfigurationAndManagement.name": "構成と管理",
+	"Web App (Windows).category.DiagnosticTools.description": "プロアクティブなツールを実行して、アプリを自動的に軽減します。",
+	"Web App (Windows).category.DiagnosticTools.keywords": "自動修復",
+	"Web App (Windows).category.DiagnosticTools.name": "診断ツール",
+	"Web App (Windows).category.RiskAssessments.description": "最適なパフォーマンスと構成についてアプリを分析します。",
+	"Web App (Windows).category.RiskAssessments.keywords": "Autoscale、AlwaysOn、Density、ARR、Health Check",
+	"Web App (Windows).category.RiskAssessments.name": "リスク評価",
+	"Web App (Windows).category.SSLandDomains.description": "証明書とカスタムドメインの問題を発見します。",
+	"Web App (Windows).category.SSLandDomains.keywords": "変更分析、SQL、依存関係、ストレージ",
+	"Web App (Windows).category.SSLandDomains.name": "SSLとドメイン",
+	"Web App (Windows).category.navigator.description": "アプリとその依存関係の変更を追跡します。",
+	"Web App (Windows).category.navigator.keywords": "変更分析、SQL、依存関係、ストレージ",
+	"Web App (Windows).category.navigator.name": "ナビゲーター（プレビュー）",
+	"Web App (Windows).homepage.description": "アプリのパフォーマンスを調査し、問題を診断して、アプリケーションを改善する方法を見つけます。",
+	"Web App (Windows).homepage.title": "アプリサービス診断（プレビュー）",
 	"category-overview.If you have a specific problem you want to investigate, click a topic in the left navigation or click Ask Genie.": "調査したい特定の問題がある場合は、左側のナビゲーションでトピックをクリックするか、[魔神に尋ねる]をクリックします",
 	"detector-command-bar.Ask Genie": "魔神に聞く",
 	"detector-command-bar.Feedback": "フィードバック",
 	"detector-command-bar.Refresh": "リフレッシュ",
-	"fabric-feedback.Are you satisfied with your experience? ": "あなたはあなたの経験に満足していますか？",
+	"detector-command-bar.searchPlaceHolder": "一般的な問題やツールを検索する",
+	"fabric-feedback.Are you satisfied with your experience?": "",
 	"fabric-feedback.Feedback": "フィードバック",
 	"fabric-feedback.Feedback sent!": "フィードバックを送信しました！",
 	"fabric-feedback.Submit feedback": "フィードバックを送信",
@@ -27,11 +87,10 @@
 	"fabric-feedback.Thank you for your feedback": "ご意見ありがとうございます",
 	"fabric-feedback.checkLabel": "マイクロソフトはあなたのフィードバックについてあなたに電子メールを送ることができます",
 	"fabric-search-results| Ask chatbot Genie": "チャットボットの魔神に聞く",
-	"function.homepage.description": "アプリのパフォーマンスを調査し、問題を診断して、アプリケーションを改善する方法を見つけます。",
-	"function.homepage.title": "機能アプリの診断（プレビュー）",
 	"homePageText.description": "",
 	"homePageText.searchBarPlaceHolder": "",
 	"homePageText.title": "",
+	"homepage.Click here to checkout the new version.": "新しいバージョンをチェックアウトするには、ここをクリックしてください。",
 	"homepage.Have questions?": "質問をする",
 	"homepage.Popular troubleshooting tools": "人気のトラブルシューティングツール",
 	"homepage.Privacy": "プライバシー",
