--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/zh.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/zh.json
@@ -1,37 +1,96 @@
 {
+	"API Management.homepage.description": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
+	"ASE.homepage.description": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
+	"ASE.homepage.title": "App Service Environment诊断",
+	"App Service Certificates.homepage.description": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
+	"App Service Certificates.homepage.title": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
 	"Apply": "",
 	"Ask Genie": "",
+	"Availability": "可用性",
+	"Availability and Performance": "可用性和性能",
+	"Azure Container Instances.homepage.description": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
+	"Azure Container Instances.homepage.title": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
+	"Azure Container Registry.homepage.description": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
+	"Azure Container Registry.homepage.title": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
+	"Azure Kubernetes Service.homepage.description": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
+	"Azure Kubernetes Service.homepage.title": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
+	"Azure SignalR Services.homepage.description": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
+	"Azure SignalR Services.homepage.title": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
+	"Azure Spring Cloud.category.AvailabilityAndPerformance.description": "您的应用是否出现应用停机或运行缓慢的情况？您的Config Server配置是否没有响应？调查并发现可能影响应用程序可用性的问题。",
+	"Azure Spring Cloud.category.AvailabilityAndPerformance.name": "可用性和性能",
+	"Azure Spring Cloud.category.ConfigurationsAndManagement.description": "您在导出平台日志或分布式跟踪时遇到问题吗？您为应用程序配置的某些设置是否有问题？找出是否错误配置了Azure Spring Cloud的某些功能，例如Log Analytics，App Insights，扩展，部署和域。",
+	"Azure Spring Cloud.category.ConfigurationsAndManagement.name": "配置与管理",
+	"Azure Spring Cloud.category.Networking.description": "将Azure Spring Cloud部署在自己的虚拟网络中时，您是否遇到网络连接问题？找出您是否在VNet注入的服务实例中配置了私有DNS区域，自定义DNS服务器或阻止了所需的出站流量。",
+	"Azure Spring Cloud.category.Networking.name": "网络",
+	"Azure Spring Cloud.homepage.description": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
+	"Azure Spring Cloud.homepage.title": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
 	"Cancel": "",
-	"Extract me": "fwfewf",
+	"Check your app’s health and discover app or platform issues.": "检查您应用的运行状况，并发现应用或平台问题。",
+	"Click here to view more details": "点击此处查看更多详细信息",
+	"Critical": "关键",
+	"Function App.homepage.description": "调查您的应用程序的性能如何，诊断问题并发现如何改进您的应用程序。",
+	"Function App.homepage.title": "功能应用程序诊断（预览）",
+	"Info": "通知",
+	"Integration Service Environments.homepage.name": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
+	"Integration Service Environments.homepage.title": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
+	"Keywords": "关键词",
+	"Notifications": "",
 	"Others": "",
 	"Overview": "概述",
 	"Popular troubleshooting tools": "常用的故障排除工具",
 	"Privacy": "隐私",
 	"Risk alerts": "Espanish categories",
+	"Service Fabric.homepage.description": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
+	"Service Fabric.homepage.title": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
+	"Static Azure Kubernetes Service.homepage.description": "探索诊断和排除群集的常见问题（从CRUD操作到连接问题）的方法。单击下面的任何文档以开始故障排除。",
+	"Static Azure Kubernetes Service.homepage.title": "Azure Kubernetes服务诊断",
+	"Success": "成功",
+	"Troubleshoot": "疑难解答",
 	"Troubleshooting categories": "Espanish categories",
 	"UTC End Time (mm/dd/yy)": "UTC结束时间（mm / dd / yy）",
 	"UTC Start Time (mm/dd/yy)": "UTC开始时间（mm / dd / yy）",
-	"ase.homepage.description": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
-	"ase.homepage.title": "App Service Environment诊断",
+	"Warning": "警告",
+	"Web App (Linux).homepage.description": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
+	"Web App (Linux).homepage.title": "使用App Service环境诊断程序可以调查您的App Service环境如何执行，诊断问题以及发现如何提高App Service环境的可用性。选择以下您感兴趣的问题类别进行了解。",
+	"Web App (Windows).category.AvailabilityAndPerformanceWindows.description": "检查您应用的运行状况，并发现应用或平台问题。",
+	"Web App (Windows).category.AvailabilityAndPerformanceWindows.keywords": "Downtime，5xx，4xx，CPU，内存，SNAT",
+	"Web App (Windows).category.AvailabilityAndPerformanceWindows.name": "可用性和性能",
+	"Web App (Windows).category.ConfigurationAndManagement.description": "找出您的应用程序服务功能是否配置错误。",
+	"Web App (Windows).category.ConfigurationAndManagement.keywords": "备份，Slots，交换，Scaling，IP配置",
+	"Web App (Windows).category.ConfigurationAndManagement.name": "配置与管理",
+	"Web App (Windows).category.DiagnosticTools.description": "运行主动工具以自动缓解该应用程序。",
+	"Web App (Windows).category.DiagnosticTools.keywords": "自动修复",
+	"Web App (Windows).category.DiagnosticTools.name": "诊断工具",
+	"Web App (Windows).category.RiskAssessments.description": "分析您的应用以获得最佳性能和配置。",
+	"Web App (Windows).category.RiskAssessments.keywords": "自动Scale，AlwaysOn，应用密度，ARR，运行状况检查",
+	"Web App (Windows).category.RiskAssessments.name": "风险评估",
+	"Web App (Windows).category.SSLandDomains.description": "发现证书和自定义域的问题。",
+	"Web App (Windows).category.SSLandDomains.keywords": "变更分析，SQL，依赖性，存储",
+	"Web App (Windows).category.SSLandDomains.name": "SSL和域名",
+	"Web App (Windows).category.navigator.description": "跟踪您的应用及其依赖项上的更改。",
+	"Web App (Windows).category.navigator.keywords": "变更分析，SQL，依赖性，存储",
+	"Web App (Windows).category.navigator.name": "Navigator（预览）",
+	"Web App (Windows).homepage.description": "调查您的应用程序的性能如何，诊断问题，并发现如何改进您的应用程序。",
+	"Web App (Windows).homepage.title": "应用服务诊断（预览）",
 	"category-overview.If you have a specific problem you want to investigate, click a topic in the left navigation or click Ask Genie.": "如果您有特定的问题要调查，请单击左侧导航中的主题或单击“询问小助手”。",
 	"detector-command-bar.Ask Genie": "询问小助手",
 	"detector-command-bar.Feedback": "反馈",
 	"detector-command-bar.Refresh": "刷新",
-	"fabric-feedback.Are you satisfied with your experience? ": "您对这个解决方案感到满意吗？",
+	"detector-command-bar.searchPlaceHolder": "搜索常见问题或工具",
+	"fabric-feedback.Are you satisfied with your experience?": "您对本次体验满意吗？",
 	"fabric-feedback.Feedback": "反馈",
 	"fabric-feedback.Feedback sent!": "反馈已发送",
 	"fabric-feedback.Submit feedback": "提交反馈",
-	"fabric-feedback.Tell us about your experience": "",
+	"fabric-feedback.Tell us about your experience": "告诉我们你的体验",
 	"fabric-feedback.Tell us about your experience.": "告诉我们你的体验",
 	"fabric-feedback.Thank you for giving us feedback!": "感谢您提供反馈！",
 	"fabric-feedback.Thank you for your feedback": "感谢您的反馈意见",
 	"fabric-feedback.checkLabel": "Microsoft可以通过电子邮件向您发送有关您的反馈的信息",
 	"fabric-search-results| Ask chatbot Genie": "询问智能小助手",
-	"function.homepage.description": "调查您的应用程序的性能如何，诊断问题并发现如何改进您的应用程序。",
-	"function.homepage.title": "功能应用程序诊断（预览）",
 	"homePageText.description": "",
 	"homePageText.searchBarPlaceHolder": "",
 	"homePageText.title": "",
+	"homepage.Click here to checkout the new version.": "单击此处签出新版本。",
 	"homepage.Have questions?": "搜索问题",
 	"homepage.Popular troubleshooting tools": "常用的故障排除工具",
 	"homepage.Privacy": "隐私",
