--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/de.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/de.json
@@ -1,23 +1,83 @@
 {
+	"API Management.homepage.description": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
+	"ASE.homepage.description": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
+	"ASE.homepage.title": "App Service-Umgebungsdiagnose",
+	"App Service Certificates.homepage.description": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
+	"App Service Certificates.homepage.title": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
 	"Apply": "",
 	"Ask Genie": "",
+	"Availability": "",
+	"Availability and Performance": "",
+	"Azure Container Instances.homepage.description": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
+	"Azure Container Instances.homepage.title": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
+	"Azure Container Registry.homepage.description": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
+	"Azure Container Registry.homepage.title": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
+	"Azure Kubernetes Service.homepage.description": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
+	"Azure Kubernetes Service.homepage.title": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
+	"Azure SignalR Services.homepage.description": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
+	"Azure SignalR Services.homepage.title": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
+	"Azure Spring Cloud.category.AvailabilityAndPerformance.description": "Tritt in Ihrer App eine Ausfallzeit oder Langsamkeit der App auf? Reagieren Ihre Konfigurationen für Config Server nicht? Untersuchen und entdecken Sie Probleme, die sich auf die Verfügbarkeit Ihrer App auswirken können.",
+	"Azure Spring Cloud.category.AvailabilityAndPerformance.name": "Verfügbarkeit und Leistung",
+	"Azure Spring Cloud.category.ConfigurationsAndManagement.description": "Haben Sie Probleme beim Exportieren von Plattformprotokollen oder bei der verteilten Ablaufverfolgung? Haben Sie Probleme mit einigen Einstellungen, die Sie für Ihre App konfiguriert haben? Finden Sie heraus, ob Sie einige Funktionen von Azure Spring Cloud falsch konfiguriert haben, z. B. Protokollanalyse, App Insights, Skalierung, Bereitstellung und Domäne ..",
+	"Azure Spring Cloud.category.ConfigurationsAndManagement.name": "Konfigurationen und Verwaltung",
+	"Azure Spring Cloud.category.Networking.description": "Haben Sie Probleme mit der Netzwerkkonnektivität, wenn Azure Spring Cloud in Ihrem eigenen virtuellen Netzwerk bereitgestellt wird? Stellen Sie fest, ob Sie die private DNS-Zone, den benutzerdefinierten DNS-Server falsch konfiguriert oder den erforderlichen ausgehenden Datenverkehr in Ihrer VNet-injizierten Dienstinstanz blockiert haben.",
+	"Azure Spring Cloud.category.Networking.name": "Vernetzung",
+	"Azure Spring Cloud.homepage.description": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
+	"Azure Spring Cloud.homepage.title": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
 	"Cancel": "",
-	"Extract me": "",
+	"Check your app’s health and discover app or platform issues.": "Überprüfen Sie den Zustand Ihrer App und entdecken Sie Probleme mit Apps oder Plattformen.",
+	"Click here to view more details": "",
+	"Critical": "",
+	"Function App.homepage.description": "Untersuchen Sie die Leistung Ihrer App, diagnostizieren Sie Probleme und finden Sie heraus, wie Sie Ihre Anwendung verbessern können.",
+	"Function App.homepage.title": "Funktions-App-Diagnose (Vorschau)",
+	"Info": "",
+	"Integration Service Environments.homepage.name": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
+	"Integration Service Environments.homepage.title": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
+	"Keywords": "Schlüsselwörter",
+	"Notifications": "",
 	"Others": "",
 	"Overview": "Überblick",
 	"Popular troubleshooting tools": "Beliebte Tools zur Fehlerbehebung",
 	"Privacy": "Privatsphäre",
 	"Risk alerts": "",
+	"Service Fabric.homepage.description": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
+	"Service Fabric.homepage.title": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
+	"Static Azure Kubernetes Service.homepage.description": "Erforschen Sie Möglichkeiten zur Diagnose und Behebung der häufigsten Probleme Ihres Clusters, von CRUD-Vorgängen bis hin zu Verbindungsproblemen. Klicken Sie auf eines der folgenden Dokumente, um die Fehlerbehebung zu starten.",
+	"Static Azure Kubernetes Service.homepage.title": "Azure Kubernetes-Dienstdiagnose",
+	"Success": "",
+	"Troubleshoot": "Problembehandlung",
 	"Troubleshooting categories": "",
 	"UTC End Time (mm/dd/yy)": "UTC-Endzeit (MM / TT / JJ)",
 	"UTC Start Time (mm/dd/yy)": "UTC-Startzeit (MM / TT / JJ)",
-	"ase.homepage.description": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
-	"ase.homepage.title": "App Service-Umgebungsdiagnose",
+	"Warning": "",
+	"Web App (Linux).homepage.description": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
+	"Web App (Linux).homepage.title": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
+	"Web App (Windows).category.AvailabilityAndPerformanceWindows.description": "Überprüfen Sie den Zustand Ihrer App und entdecken Sie Probleme mit Apps oder Plattformen.",
+	"Web App (Windows).category.AvailabilityAndPerformanceWindows.keywords": "Ausfallzeit, 5xx, 4xx, CPU, Speicher, SNAT",
+	"Web App (Windows).category.AvailabilityAndPerformanceWindows.name": "Verfügbarkeit und Leistung",
+	"Web App (Windows).category.ConfigurationAndManagement.description": "Finden Sie heraus, ob Ihre App-Service-Funktionen falsch konfiguriert sind.",
+	"Web App (Windows).category.ConfigurationAndManagement.keywords": "Backups, Slots, Swaps, Skalierung, IP-Konfiguration",
+	"Web App (Windows).category.ConfigurationAndManagement.name": "Konfiguration und Verwaltung",
+	"Web App (Windows).category.DiagnosticTools.description": "Führen Sie proaktive Tools aus, um die App automatisch zu entschärfen.",
+	"Web App (Windows).category.DiagnosticTools.keywords": "Auto-Heal",
+	"Web App (Windows).category.DiagnosticTools.name": "Diagnosewerkzeuge",
+	"Web App (Windows).category.RiskAssessments.description": "Analysieren Sie Ihre App auf optimale Leistung und Konfigurationen.",
+	"Web App (Windows).category.RiskAssessments.keywords": "Autoscale, AlwaysOn, Dichte, ARR, Gesundheitscheck",
+	"Web App (Windows).category.RiskAssessments.name": "Risikobewertungen",
+	"Web App (Windows).category.SSLandDomains.description": "Erkennen Sie Probleme mit Zertifikaten und benutzerdefinierten Domänen.",
+	"Web App (Windows).category.SSLandDomains.keywords": "Änderungsanalyse, SQL, Abhängigkeit, Speicher",
+	"Web App (Windows).category.SSLandDomains.name": "SSL und Domains",
+	"Web App (Windows).category.navigator.description": "Verfolgen Sie Änderungen an Ihrer App und ihren Abhängigkeiten.",
+	"Web App (Windows).category.navigator.keywords": "Änderungsanalyse, SQL, Abhängigkeit, Speicher",
+	"Web App (Windows).category.navigator.name": "Navigator (Vorschau)",
+	"Web App (Windows).homepage.description": "Untersuchen Sie die Leistung Ihrer App, diagnostizieren Sie Probleme und finden Sie heraus, wie Sie Ihre Anwendung verbessern können.",
+	"Web App (Windows).homepage.title": "App Service Diagnose (Vorschau)",
 	"category-overview.If you have a specific problem you want to investigate, click a topic in the left navigation or click Ask Genie.": "Wenn Sie ein bestimmtes Problem haben, das Sie untersuchen möchten, klicken Sie in der linken Navigation auf ein Thema oder klicken Sie auf Genie fragen",
 	"detector-command-bar.Ask Genie": "Fragen Sie Genie",
 	"detector-command-bar.Feedback": "Feedback",
 	"detector-command-bar.Refresh": "Aktualisierung",
-	"fabric-feedback.Are you satisfied with your experience? ": "Bist du mit deiner Erfahrung zufrieden?",
+	"detector-command-bar.searchPlaceHolder": "Suchen Sie nach allgemeinen Problemen oder Tools",
+	"fabric-feedback.Are you satisfied with your experience?": "",
 	"fabric-feedback.Feedback": "Feedback",
 	"fabric-feedback.Feedback sent!": "Feedback gesendet!",
 	"fabric-feedback.Submit feedback": "Feedback einreichen",
@@ -27,11 +87,10 @@
 	"fabric-feedback.Thank you for your feedback": "Vielen Dank für dein Feedback",
 	"fabric-feedback.checkLabel": "Microsoft kann Sie per E-Mail über Ihr Feedback informieren",
 	"fabric-search-results| Ask chatbot Genie": "Fragen Sie Chatbot Genie",
-	"function.homepage.description": "Untersuchen Sie die Leistung Ihrer App, diagnostizieren Sie Probleme und finden Sie heraus, wie Sie Ihre Anwendung verbessern können.",
-	"function.homepage.title": "Funktions-App-Diagnose (Vorschau)",
 	"homePageText.description": "",
 	"homePageText.searchBarPlaceHolder": "",
 	"homePageText.title": "",
+	"homepage.Click here to checkout the new version.": "Klicken Sie hier, um die neue Version zu testen.",
 	"homepage.Have questions?": "Frage stellen",
 	"homepage.Popular troubleshooting tools": "Beliebte Tools zur Fehlerbehebung",
 	"homepage.Privacy": "Privatsphäre",
