--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/en.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/en.json
@@ -1,37 +1,96 @@
 {
-	"Apply": "",
-	"Ask Genie": "",
+	"API Management.homepage.description": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
+	"ASE.homepage.description": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
+	"ASE.homepage.title": "App Service Environment Diagnostics",
+	"App Service Certificates.homepage.description": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
+	"App Service Certificates.homepage.title": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
+	"Apply": "Apply",
+	"Ask Genie": "Ask Genie",
+	"Availability": "Availability",
+	"Availability and Performance": "Availability and Performance",
+	"Azure Container Instances.homepage.description": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
+	"Azure Container Instances.homepage.title": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
+	"Azure Container Registry.homepage.description": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
+	"Azure Container Registry.homepage.title": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
+	"Azure Kubernetes Service.homepage.description": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
+	"Azure Kubernetes Service.homepage.title": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
+	"Azure SignalR Services.homepage.description": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
+	"Azure SignalR Services.homepage.title": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
+	"Azure Spring Cloud.category.AvailabilityAndPerformance.description": "Is your app experiencing app downtime or slowness? Are your configurations for Config Server experiencing unresponsiveness? Investigate and discover issues that may impact your app availability.",
+	"Azure Spring Cloud.category.AvailabilityAndPerformance.name": "Availability and Performance",
+	"Azure Spring Cloud.category.ConfigurationsAndManagement.description": "Are you having issues exporting platform logs or distributed tracing? Are you having issue with some settings that you configured for your app? Find out if you misconfigured some features of Azure Spring Cloud, such as Log Analytics, App Insights, scaling, deployments and domain.",
+	"Azure Spring Cloud.category.ConfigurationsAndManagement.name": "Configurations and Management",
+	"Azure Spring Cloud.category.Networking.description": "Are you having network connectivity issues when Azure Spring Cloud is deployed in your own virtual network? Find out if you misconfigured the Private DNS Zone, Custom DNS Server or blocked required outbound traffic in your VNet injected service instance.",
+	"Azure Spring Cloud.category.Networking.name": "Networking",
+	"Azure Spring Cloud.homepage.description": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
+	"Azure Spring Cloud.homepage.title": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
 	"Cancel": "",
-	"Extract me": "",
+	"Check your app’s health and discover app or platform issues.": "Check your app’s health and discover app or platform issues.",
+	"Click here to view more details": "Click here to view more details",
+	"Critical": "Critical",
+	"Function App.homepage.description": "Investigate how your app is performing, diagnose issues and discover how to improve your application.",
+	"Function App.homepage.title": "Function App Diagnostics (Preview)",
+	"Info": "Info",
+	"Integration Service Environments.homepage.name": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
+	"Integration Service Environments.homepage.title": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
+	"Keywords": "Keywords",
+	"Notifications": "Notifications",
 	"Others": "",
 	"Overview": "Overview",
 	"Popular troubleshooting tools": "Popular troubleshooting tools",
 	"Privacy": "Privacy",
 	"Risk alerts": "",
+	"Service Fabric.homepage.description": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
+	"Service Fabric.homepage.title": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
+	"Static Azure Kubernetes Service.homepage.description": "Explore ways to diagnose and troubleshoot the common problems of your cluster from CRUD operations to connection problems. Click on any of the documents below to start troubleshooting.",
+	"Static Azure Kubernetes Service.homepage.title": "Azure Kubernetes Service Diagnostics",
+	"Success": "Success",
+	"Troubleshoot": "Troubleshoot",
 	"Troubleshooting categories": "",
 	"UTC End Time (mm/dd/yy)": "UTC End Time (mm/dd/yy)",
 	"UTC Start Time (mm/dd/yy)": "UTC Start Time (mm/dd/yy)",
-	"ase.homepage.description": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
-	"ase.homepage.title": "App Service Environment Diagnostics",
+	"Warning": "Warning",
+	"Web App (Linux).homepage.description": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
+	"Web App (Linux).homepage.title": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
+	"Web App (Windows).category.AvailabilityAndPerformanceWindows.description": "Check your app’s health and discover app or platform issues.",
+	"Web App (Windows).category.AvailabilityAndPerformanceWindows.keywords": "Downtime, 5xx, 4xx, CPU, Memory, SNAT",
+	"Web App (Windows).category.AvailabilityAndPerformanceWindows.name": "Availability and Performance",
+	"Web App (Windows).category.ConfigurationAndManagement.description": "Find out if your app service features are misconfigured.",
+	"Web App (Windows).category.ConfigurationAndManagement.keywords": "Backups, Slots, Swaps, Scaling, IP Config",
+	"Web App (Windows).category.ConfigurationAndManagement.name": "Configuration and Management",
+	"Web App (Windows).category.DiagnosticTools.description": "Run proactive tools to automatically mitigate the app.",
+	"Web App (Windows).category.DiagnosticTools.keywords": "Auto-Heal",
+	"Web App (Windows).category.DiagnosticTools.name": "Diagnostic Tools",
+	"Web App (Windows).category.RiskAssessments.description": "Analyze your app for optimal performance and configurations.",
+	"Web App (Windows).category.RiskAssessments.keywords": "Autoscale, AlwaysOn, Density, ARR, Health Check",
+	"Web App (Windows).category.RiskAssessments.name": "Risk Assessments",
+	"Web App (Windows).category.SSLandDomains.description": "Discover issues with certificates and custom domains.",
+	"Web App (Windows).category.SSLandDomains.keywords": "Change Analysis, SQL, Dependency, Storage",
+	"Web App (Windows).category.SSLandDomains.name": "SSL and Domains",
+	"Web App (Windows).category.navigator.description": "Track changes on your app and its dependencies.",
+	"Web App (Windows).category.navigator.keywords": "Change Analysis, SQL, Dependency, Storage",
+	"Web App (Windows).category.navigator.name": "Navigator (Preview)",
+	"Web App (Windows).homepage.description": "Investigate how your app is performing, diagnose issues, and discover how to improve your application.",
+	"Web App (Windows).homepage.title": "App Service Diagnostics (Preview)",
 	"category-overview.If you have a specific problem you want to investigate, click a topic in the left navigation or click Ask Genie.": "If you have a specific problem you want to investigate, click a topic in the left navigation or click Ask Genie",
 	"detector-command-bar.Ask Genie": "",
 	"detector-command-bar.Feedback": "",
-	"detector-command-bar.Refresh": "",
-	"fabric-feedback.Are you satisfied with your experience? ": "Are you satisfied with your experience? ",
-	"fabric-feedback.Feedback": "",
+	"detector-command-bar.Refresh": "Refresh",
+	"detector-command-bar.searchPlaceHolder": "Search for common problems or tools",
+	"fabric-feedback.Are you satisfied with your experience?": "Are you satisfied with your experience?",
+	"fabric-feedback.Feedback": "Feedback",
 	"fabric-feedback.Feedback sent!": "",
 	"fabric-feedback.Submit feedback": "",
-	"fabric-feedback.Tell us about your experience": "",
-	"fabric-feedback.Tell us about your experience.": "",
+	"fabric-feedback.Tell us about your experience": "Tell us about your experience",
+	"fabric-feedback.Tell us about your experience.": "Tell us about your experience.",
 	"fabric-feedback.Thank you for giving us feedback!": "",
 	"fabric-feedback.Thank you for your feedback": "",
 	"fabric-feedback.checkLabel": "",
 	"fabric-search-results| Ask chatbot Genie": "Ask chatbot Genie",
-	"function.homepage.description": "Investigate how your app is performing, diagnose issues and discover how to improve your application.",
-	"function.homepage.title": "Function App Diagnostics (Preview)",
 	"homePageText.description": "",
 	"homePageText.searchBarPlaceHolder": "",
 	"homePageText.title": "",
+	"homepage.Click here to checkout the new version.": "Click here to checkout the new version.",
 	"homepage.Have questions?": "Have questions?",
 	"homepage.Popular troubleshooting tools": "Popular troubleshooting tools",
 	"homepage.Privacy": "Privacy",
