Update generic arm config service

--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/de.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/de.json
@@ -26,6 +26,7 @@
 	"Azure Spring Cloud.homepage.title": "Verwenden Sie die App Service-Umgebungsdiagnose, um die Leistung Ihrer App Service-Umgebung zu untersuchen, Probleme zu diagnostizieren und herauszufinden, wie Sie die Verfügbarkeit Ihrer App Service-Umgebung verbessern können.",
 	"Cancel": "",
 	"Check your app’s health and discover app or platform issues.": "Überprüfen Sie den Zustand Ihrer App und entdecken Sie Probleme mit Apps oder Plattformen.",
+	"Click here to go back to the old version.": "",
 	"Click here to view more details": "",
 	"Critical": "",
 	"Function App.homepage.description": "Untersuchen Sie die Leistung Ihrer App, diagnostizieren Sie Probleme und finden Sie heraus, wie Sie Ihre Anwendung verbessern können.",
