--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/en.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/en.json
@@ -26,6 +26,7 @@
 	"Azure Spring Cloud.homepage.title": "Use App Service Environment Diagnostics to investigate how your App Service Environment is performing, diagnose issues, and discover how to improve the availability of your App Service Environment.  Select the problem category that best matches the information or tool that you are  interested in.",
 	"Cancel": "",
 	"Check your app’s health and discover app or platform issues.": "Check your app’s health and discover app or platform issues.",
+	"Click here to go back to the old version.": "Click here to go back to the old version",
 	"Click here to view more details": "Click here to view more details",
 	"Critical": "Critical",
 	"Function App.homepage.description": "Investigate how your app is performing, diagnose issues and discover how to improve your application.",
