--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/es.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/es.json
@@ -26,6 +26,7 @@
 	"Azure Spring Cloud.homepage.title": "Utilice App Service Environment Diagnostics para investigar el rendimiento de su App Service Environment, diagnosticar problemas y descubrir cómo mejorar la disponibilidad de su App Service Environment.",
 	"Cancel": "",
 	"Check your app’s health and discover app or platform issues.": "Verifique el estado de su aplicación y descubra problemas con la plataforma o la aplicación.",
+	"Click here to go back to the old version.": "",
 	"Click here to view more details": "",
 	"Critical": "",
 	"Function App.homepage.description": "Investigue el rendimiento de su aplicación, diagnostique problemas y descubra cómo mejorarla.",
