--- a/AngularApp/projects/app-service-diagnostics/src/assets/i18n/ko.json
+++ b/AngularApp/projects/app-service-diagnostics/src/assets/i18n/ko.json
@@ -26,6 +26,7 @@
 	"Azure Spring Cloud.homepage.title": "",
 	"Cancel": "",
 	"Check your app’s health and discover app or platform issues.": "",
+	"Click here to go back to the old version.": "",
 	"Click here to view more details": "",
 	"Critical": "",
 	"Function App.homepage.description": "",
